--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AskAndReply</title>
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>A Platform to ask and reply!</h1>
-    <hr>
-    <h2>En: Welcome</h2>
-    <h2>PT: Bem vindo</h2>
+
+<h1>Olá meus nobres</h1>
+
+<img src="/img/GNpidcqWkAAg1J5.jpeg" alt="">
+
+
+<!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
+
 </html>
