route postform created

--- a/src/views/askTo.ejs
+++ b/src/views/askTo.ejs
@@ -9,14 +9,14 @@
                 <hr>
             </header>
             <main class="card-body">
-                <form action="" method="post">
+                <form action="/ask/postform" method="post">
 
                     <label for="titleFormAskInput">Title</label>
                     <input type="text" name="titleFormAsk" id="titleFormAskInput" placeholder="Title"
                         class="form-control">
 
                     <label class="gap-text" for="textFormAsk">Description</label>
-                    <textarea class="form-control" id="textFormAsk" placeholder="Describe your question"></textarea>
+                    <textarea class="form-control" name="descriptionFormAsk" id="textFormAsk" placeholder="Describe your question"></textarea>
 
                     <button class="btn btn-primary gap">Ask!</button>
                 </form>
