--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,9 +1,21 @@
 <%- include('./partials/header.ejs') %>
 <body>
     <%- include('./partials/navbar.ejs') %>
-
-    <h1>Olá meus nobres</h1>
-    <a href="/ask">Criar pergunta</a>
+    <div class="container pd-9">
+        <h1 class="gap">Ask and Reply</h1>
+        <a href="/ask" class="btn btn-primary gap-text">Create your question</a>
+        <hr>
+        <% QuestionsArray.forEach(question => { %>
+            <div class="card gap">
+                <div class="card-body">
+                    <h3><%- question.title %></h3>
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-primary">Reply</button>
+                </div>
+            </div>
+        <% }) %>
+    </div>
 
 </body>
 <%- include('./partials/footer.ejs') %>
