--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-light">
+    <h1 class="navbar navbar-logo">A&R</h1>
     <a href="/">
         <img src="/img/adm.jpeg" alt="" class="navbar-img">
     </a>
