route post to create a reply

--- a/src/views/askTo.ejs
+++ b/src/views/askTo.ejs
@@ -9,7 +9,7 @@
                 <hr>
             </header>
             <main class="card-body">
-                <form action="/ask/postform" method="post">
+                <form action="/ask/sendquestion" method="post">
 
                     <label for="titleFormAskInput">Title</label>
                     <input type="text" name="titleFormAsk" id="titleFormAskInput" placeholder="Title"
