--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,7 @@
                     <h3><%- question.title %></h3>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary">Reply</button>
+                    <a href="/question/<%= question.id %>"><button class="btn btn-primary">Reply</button></a>
                 </div>
             </div>
         <% }) %>
